[project]
name = "incident-timeline"
version = "0.1.0"
requires-python = ">=3.10"
description = "Build incident timelines from structured events"

[project.scripts]
incident-timeline = "incident_timeline.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
